# llm_scratch

./: .gitignore  CONTRIBUTION.md  Makefile  README.md  pyproject.toml  train.py  train_overfit.py
baseline/: 01_build_dataset.py  02_build_tokenizer.py  02_training.py  03_training.py  README.md  config.py  requirements.txt
notebooks/: 00_datasets.ipynb  00_play_with_gpt.ipynb
src/llm/: __init__.py  model.py  tokenizer.py  wmt_data_utils.py  wmt_dataset.py  wmt_model.py
src/llm/datasets/: __init__.py  datasets.py  utils.py
src/llm_scratch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
