[project]
name = "llm-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.1.0",
    "fire>=0.7.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "ruff>=0.8.0",
    "scikit-learn>=1.5.2",
    "tokenizers>=0.20.3",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "wandb>=0.18.7",
    "jaxtyping>=0.2.36",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]
